--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "@testing-library/jest-dom": "^5.17.0",
