--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "@gsap/react": "^2.1.1",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "@testing-library/jest-dom": "^5.17.0",
