--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "framer-motion": "^11.3.2",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
-    "react-ga4": "^2.1.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
