--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^3.4.4"
   }
 }
